--- a/cases/Cases_LinReg_Geert_MedicalCostPrediction/requirements.txt
+++ b/cases/Cases_LinReg_Geert_MedicalCostPrediction/requirements.txt
@@ -12,6 +12,7 @@ astor==0.8.1
 asttokens==2.4.1
 async-lru==2.0.4
 attrs==24.2.0
+Automat==24.8.1
 autoviz==0.1.905
 babel==2.16.0
 beautifulsoup4==4.12.3
@@ -31,8 +32,10 @@ colorama==0.4.6
 colorcet==3.1.0
 colorlog==6.9.0
 comm==0.2.2
+constantly==23.10.4
 contourpy==1.3.1
 cookiecutter==2.6.0
+cryptography==44.0.0
 cssselect==1.2.0
 cssutils==2.11.1
 cycler==0.12.1
@@ -56,6 +59,7 @@ emoji==2.14.0
 et_xmlfile==2.0.0
 executing==2.1.0
 fastjsonschema==2.20.0
+filelock==3.17.0
 Flask==3.0.3
 Flask-Compress==1.17
 fonttools==4.55.0
@@ -73,22 +77,29 @@ greenlet==3.1.1
 h11==0.14.0
 holoviews==1.20.0
 html2image==2.0.5
+htmlmin==0.1.12
 httpcore==1.0.6
 httpx==0.27.2
 hvplot==0.11.1
+hyperlink==21.0.0
 idna==3.10
+ImageHash==4.3.2
 imbalanced-learn==0.13.0
 imblearn==0.0
 importlib_metadata==8.5.0
 importlib_resources==6.4.5
+incremental==24.7.2
 ipykernel==6.29.5
 ipython==8.28.0
 ipywidgets==8.1.5
 isoduration==20.11.0
+itemadapter==0.11.0
+itemloaders==1.3.2
 itsdangerous==2.2.0
 jedi==0.19.1
 Jinja2==3.1.4
-joblib==1.4.2
+jmespath==1.0.1
+joblib==1.1.1
 json5==0.9.25
 jsonpointer==3.0.0
 jsonschema==4.23.0
@@ -116,7 +127,7 @@ lz4==4.3.3
 Mako==1.3.8
 Markdown==3.7
 markdown-it-py==3.0.0
-MarkupSafe==3.0.1
+MarkupSafe==2.1.5
 matplotlib==3.9.2
 matplotlib-inline==0.1.7
 mdit-py-plugins==0.4.2
@@ -127,7 +138,9 @@ mlflow==2.20.1
 mlflow-skinny==2.20.1
 more-itertools==10.5.0
 multidict==6.1.0
+multimethod==2.0
 mysql-connector-python==9.1.0
+mysqlclient==2.2.7
 nbclient==0.10.0
 nbconvert==7.16.4
 nbformat==5.10.4
@@ -146,12 +159,15 @@ overrides==7.7.0
 packaging==24.1
 pandas==2.2.3
 pandas-dq==1.29
+pandas-profiling==3.2.0
 pandasgui==0.2.14
 pandocfilters==1.5.1
 panel==1.5.4
 param==2.1.1
+parsel==1.10.0
 parso==0.8.4
 patsy==1.0.1
+phik==0.12.4
 pillow==11.0.0
 pipdeptree==2.23.4
 platformdirs==4.3.6
@@ -159,6 +175,7 @@ plotly==5.24.1
 prometheus_client==0.21.0
 prompt_toolkit==3.0.48
 propcache==0.2.1
+Protego==0.4.0
 protobuf==5.29.3
 psutil==6.0.0
 pure_eval==0.2.3
@@ -169,9 +186,11 @@ pyasn1_modules==0.4.1
 pycparser==2.22
 pydantic==2.10.6
 pydantic_core==2.27.2
+PyDispatcher==2.0.7
 Pygments==2.18.0
 pynput==1.7.7
 pyodbc==5.2.0
+pyOpenSSL==25.0.0
 pyparsing==3.2.0
 PyQt5==5.15.11
 PyQt5-Qt5==5.15.2
@@ -184,15 +203,18 @@ python-json-logger==2.0.7
 python-slugify==8.0.4
 pytz==2024.2
 pyviz_comms==3.0.3
+PyWavelets==1.8.0
 pywin32==308
 pywinpty==2.0.13
 PyYAML==6.0.2
 pyzmq==26.2.0
 qtstylish==0.1.5
+queuelib==1.7.0
 RapidFuzz==3.12.1
 referencing==0.35.1
 regex==2024.11.6
 requests==2.32.3
+requests-file==2.1.0
 retrying==1.3.4
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
@@ -201,9 +223,13 @@ rpds-py==0.20.0
 rsa==4.9
 scikit-learn==1.5.2
 scipy==1.14.1
+scrapinghub==2.5.0
+Scrapy==2.12.0
 seaborn==0.13.2
 Send2Trash==1.8.3
+service-identity==24.2.0
 setuptools==75.1.0
+shub==2.15.4
 six==1.16.0
 sklearn-compat==0.1.3
 smmap==5.0.2
@@ -218,6 +244,7 @@ statsmodels==0.14.4
 strsimpy==0.2.1
 summarytools==0.3.0
 sweetviz==2.3.1
+tangled-up-in-unicode==0.2.0
 tenacity==9.0.0
 termcolor==2.5.0
 terminado==0.18.1
@@ -226,9 +253,12 @@ textblob==0.18.0.post0
 thefuzz==0.22.1
 threadpoolctl==3.5.0
 tinycss2==1.3.0
+tldextract==5.1.3
+toml==0.10.2
 tornado==6.4.1
-tqdm==4.67.0
+tqdm==4.55.1
 traitlets==5.14.3
+Twisted==24.11.0
 types-python-dateutil==2.9.0.20241003
 typing_extensions==4.12.2
 tzdata==2024.2
@@ -236,6 +266,8 @@ uc-micro-py==1.0.3
 uri-template==1.3.0
 urllib3==2.2.3
 utils==1.0.2
+visions==0.7.4
+w3lib==2.3.1
 waitress==3.0.2
 wcwidth==0.2.13
 webcolors==24.8.0
@@ -251,4 +283,5 @@ xlrd==2.0.1
 xyzservices==2024.9.0
 yarl==1.18.3
 zipp==3.21.0
+zope.interface==7.2
 zstandard==0.23.0
