--- a/cases/Cases_LogReg_Geert_HeartAttackRiskPrediction/requirements.txt
+++ b/cases/Cases_LogReg_Geert_HeartAttackRiskPrediction/requirements.txt
@@ -11,6 +11,7 @@ arrow==1.3.0
 astor==0.8.1
 asttokens==2.4.1
 async-lru==2.0.4
+async-timeout==5.0.1
 attrs==24.2.0
 Automat==24.8.1
 autoviz==0.1.905
@@ -57,6 +58,7 @@ docker==7.1.0
 dtale==3.15.1
 emoji==2.14.0
 et_xmlfile==2.0.0
+exceptiongroup==1.2.2
 executing==2.1.0
 fastjsonschema==2.20.0
 filelock==3.17.0
@@ -67,6 +69,7 @@ fqdn==1.5.1
 frozenlist==1.5.0
 fsspec==2024.10.0
 future==1.0.0
+fuzzywuzzy==0.18.0
 gitdb==4.0.12
 GitPython==3.1.44
 google-auth==2.38.0
@@ -99,7 +102,7 @@ itsdangerous==2.2.0
 jedi==0.19.1
 Jinja2==3.1.4
 jmespath==1.0.1
-joblib>=1.2.0
+joblib==1.4.2
 json5==0.9.25
 jsonpointer==3.0.0
 jsonschema==4.23.0
@@ -159,6 +162,7 @@ overrides==7.7.0
 packaging==24.1
 pandas==2.2.3
 pandas-dq==1.29
+pandas-profiling==3.2.0
 pandasgui==0.2.14
 pandocfilters==1.5.1
 panel==1.5.4
@@ -243,6 +247,7 @@ statsmodels==0.14.4
 strsimpy==0.2.1
 summarytools==0.3.0
 sweetviz==2.3.1
+tabulate==0.9.0
 tangled-up-in-unicode==0.2.0
 tenacity==9.0.0
 termcolor==2.5.0
@@ -254,6 +259,7 @@ threadpoolctl==3.5.0
 tinycss2==1.3.0
 tldextract==5.1.3
 toml==0.10.2
+tomli==2.2.1
 tornado==6.4.1
 tqdm==4.55.1
 traitlets==5.14.3
