--- a/cases/LungCancer_LogReg_NB/requirements.txt
+++ b/cases/LungCancer_LogReg_NB/requirements.txt
@@ -1,11 +1,285 @@
-imbalanced_learn==0.13.0
-imblearn==0.0
-kaggle==1.6.17
-matplotlib==3.10.0
-numpy==2.2.3
+absl-py==2.1.0
+adagio==0.2.6
+aiohappyeyeballs==2.4.3
+aiohttp==3.11.7
+aiosignal==1.3.1
+ale-py==0.10.1
+annotated-types==0.7.0
+anyio==4.6.2.post1
+appdirs==1.4.4
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+astor==0.8.1
+astronomy==0.0.1
+asttokens==2.4.1
+astunparse==1.6.3
+async-lru==2.0.4
+attrs==24.2.0
+babel==2.16.0
+beautifulsoup4==4.12.3
+bleach==6.1.0
+blinker==1.9.0
+Brotli==1.1.0
+cachetools==5.5.0
+certifi==2024.8.30
+cffi==1.17.1
+charset-normalizer==3.4.0
+click==8.1.8
+cloudpickle==3.1.0
+colorama==0.4.6
+comm==0.2.2
+contourpy==1.3.0
+coreforecast==0.0.15
+cycler==0.12.1
+Cython==3.0.11
+dacite==1.8.1
+darts==0.31.0
+dash==2.18.2
+dash-bootstrap-components==1.6.0
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+dash-table==5.0.0
+dash_colorscales==0.0.4
+dash_daq==0.5.0
+DateTime==5.5
+debugpy==1.8.7
+decorator==5.1.1
+defusedxml==0.7.1
+dm-tree==0.1.8
+docstring_parser==0.16
+dtale==3.16.1
+et_xmlfile==2.0.0
+etils==1.11.0
+executing==2.1.0
+Farama-Notifications==0.0.4
+fastjsonschema==2.20.0
+ffmpeg==1.4
+filelock==3.16.1
+Flask==3.0.3
+Flask-Compress==1.17
+flatbuffers==24.12.23
+fonttools==4.54.1
+fqdn==1.5.1
+frozenlist==1.5.0
+fs==2.4.16
+fsspec==2024.10.0
+fugue==0.9.1
+future==1.0.0
+gast==0.6.0
+gitdb==4.0.12
+GitPython==3.1.44
+google-auth==2.37.0
+google-crc32c==1.6.0
+google-pasta==0.2.0
+google-resumable-media==2.7.2
+googleapis-common-protos==1.66.0
+graphviz==0.20.3
+grpcio==1.69.0
+grpcio-status==1.62.3
+gviz-api==1.10.0
+gymnasium==1.0.0
+h11==0.14.0
+h5py==3.12.1
+holidays==0.61
+htmlmin==0.1.12
+httpcore==1.0.6
+httpx==0.27.2
+huggingface-hub==0.27.1
+idna==3.10
+ImageHash==4.3.1
+immutabledict==4.2.1
+importlib_metadata==8.5.0
+importlib_resources==6.4.5
+ipykernel==6.29.5
+ipython==8.28.0
+ipywidgets==8.1.5
+isoduration==20.11.0
+itsdangerous==2.2.0
+jedi==0.19.1
+Jinja2==3.1.4
+joblib==1.4.2
+json5==0.9.25
+jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+jupyter==1.1.1
+jupyter-console==6.6.3
+jupyter-events==0.10.0
+jupyter-lsp==2.2.5
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+jupyter_server==2.14.2
+jupyter_server_terminals==0.5.3
+jupyterlab==4.2.5
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.27.3
+jupyterlab_widgets==3.0.13
+kaleido==0.2.1
+keras-core==0.1.7
+kiwisolver==1.4.7
+kt-legacy==1.0.5
+libclang==18.1.1
+lightning-utilities==0.11.9
+llvmlite==0.43.0
+lz4==4.3.3
+Markdown==3.7
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+matplotlib==3.9.2
+matplotlib-inline==0.1.7
+mdurl==0.1.2
+missingno==0.5.2
+mistune==3.0.2
+ml-dtypes==0.4.1
+mpmath==1.3.0
+multidict==6.1.0
+multimethod==1.12
+namex==0.0.8
+nbclient==0.10.0
+nbconvert==7.16.4
+nbformat==5.10.4
+nest-asyncio==1.6.0
+networkx==3.4.2
+nfoursid==1.0.1
+nltk==3.9.1
+notebook==7.2.2
+notebook_shim==0.2.4
+numba==0.60.0
+numexpr==2.10.2
+numpy==1.26.4
+openpyxl==3.1.5
+opt_einsum==3.4.0
+optree==0.13.1
+overrides==7.7.0
+packaging==24.1
+panda==0.3.1
 pandas==2.2.3
+pandas-profiling==3.2.0
+pandasgui==0.2.14
+pandocfilters==1.5.1
+parso==0.8.4
+patsy==1.0.1
+phik==0.12.4
+pillow==11.0.0
+platformdirs==4.3.6
 plotly==5.24.1
-plotly==6.0.0
-scikit_learn==1.6.1
-scipy==1.15.1
+pmdarima==2.0.4
+prometheus_client==0.21.0
+promise==2.3
+prompt_toolkit==3.0.48
+propcache==0.2.0
+proto-plus==1.25.0
+protobuf==4.25.5
+psutil==6.0.0
+pure_eval==0.2.3
+pyarrow==18.0.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pycparser==2.22
+pydantic==2.10.0
+pydantic_core==2.27.0
+pydot==3.0.4
+pygame==2.6.1
+Pygments==2.18.0
+pynput==1.7.7
+pyod==2.0.2
+pyodbc==5.2.0
+pyparsing==3.2.0
+PyQt5==5.15.11
+PyQt5-Qt5==5.15.2
+PyQt5_sip==12.15.0
+PyQtWebEngine==5.15.7
+PyQtWebEngine-Qt5==5.15.2
+pysolar==0.11
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-json-logger==2.0.7
+pytorch-lightning==2.4.0
+pytz==2024.2
+PyWavelets==1.7.0
+pywin32==308
+pywinpty==2.0.13
+PyYAML==6.0.2
+pyzmq==26.2.0
+qtstylish==0.1.5
+referencing==0.35.1
+regex==2024.11.6
+requests==2.32.3
+retrying==1.3.4
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rich==13.9.4
+rpds-py==0.20.0
+rsa==4.9
+safetensors==0.5.2
+scikit-learn==1.5.2
+scipy==1.13.1
 seaborn==0.13.2
+Send2Trash==1.8.3
+setuptools==75.6.0
+shap==0.46.0
+shapely==2.0.6
+simple-parsing==0.1.6
+six==1.16.0
+slicer==0.0.8
+smmap==5.0.2
+sniffio==1.3.1
+soupsieve==2.6
+squarify==0.4.4
+stack-data==0.6.3
+statsforecast==1.7.8
+statsmodels==0.14.4
+strsimpy==0.2.1
+sweetviz==2.3.1
+sympy==1.13.1
+tangled-up-in-unicode==0.2.0
+tbats==1.1.3
+tenacity==9.0.0
+tensorboard==2.18.0
+tensorboard-data-server==0.7.2
+tensorboard-plugin-profile==2.18.0
+tensorboardX==2.6.2.2
+tensorflow-metadata==1.16.1
+term==2.5
+termcolor==2.5.0
+terminado==0.18.1
+threadpoolctl==3.5.0
+tinycss2==1.3.0
+tokenizers==0.21.0
+toml==0.10.2
+torch==2.5.1
+torchmetrics==1.6.0
+tornado==6.4.1
+tqdm==4.67.0
+traitlets==5.14.3
+transformers==4.48.0
+triad==0.9.8
+typeguard==4.4.1
+types-python-dateutil==2.9.0.20241003
+typing_extensions==4.12.2
+tzdata==2024.2
+uri-template==1.3.0
+uritools==4.0.3
+urlextract==1.9.0
+urllib3==2.2.3
+utils==1.0.2
+utilsforecast==0.2.9
+visions==0.7.5
+wcwidth==0.2.13
+webcolors==24.8.0
+webencodings==0.5.1
+websocket-client==1.8.0
+Werkzeug==3.0.6
+wheel==0.45.1
+widgetsnbextension==4.0.13
+wordcloud==1.9.4
+wrapt==1.17.0
+xarray==2024.11.0
+xgboost==2.1.2
+xlrd==2.0.1
+yarl==1.18.0
+ydata-profiling==4.12.0
+zipp==3.21.0
+zope.interface==7.1.0
+zstandard==0.23.0
